--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "js/server.js",
   "scripts": {
-    "start": "node js/server.js",
+    "start": "node --harmony js/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Maurits van Mastrigt <maurits@nerdieworks.nl>",
@@ -17,6 +17,7 @@
   "dependencies": {
     "binary": "^0.3.0",
     "connect": "^3.4.0",
+    "fiware-orion-client": "^0.5.4",
     "object-assign": "^4.0.1",
     "raw-body": "^2.1.4"
   }
