--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "connect": "^3.4.0",
     "fiware-orion-client": "^0.5.4",
     "object-assign": "^4.0.1",
-    "raw-body": "^2.1.4"
+    "raw-body": "^2.1.4",
+    "vm2": "^0.2.3"
   }
 }
