--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "vm2": "^0.2.3"
   },
   "devDependencies": {
+    "babel-cli": "^6.1.4",
+    "babel-preset-es2015": "^6.1.4",
     "jasmine-es6": "0.0.18"
   }
 }
