--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "start": "babel-node src/server.js",
-    "test": "./node_modules/.bin/jasmine"
+    "test": "babel-node spec/run.js"
   },
   "author": "Maurits van Mastrigt <maurits@nerdieworks.nl>",
   "repository": {
@@ -14,14 +14,14 @@
   },
   "license": "MIT",
   "dependencies": {
+    "babel-cli": "^6.1.4",
+    "babel-preset-es2015": "^6.1.4",
     "connect": "^3.4.0",
     "raw-body": "^2.1.4",
     "request": "^2.65.0",
     "vm2": "^0.2.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.1.4",
-    "babel-preset-es2015": "^6.1.4",
-    "jasmine-es6": "0.0.18"
+    "jasmine": "^2.3.2"
   }
 }
