--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "private": true,
   "scripts": {
     "start": "babel-node src/server.js",
+    "lint": "eslint src/**/*.js",
     "test": "babel-node spec/run.js"
   },
-  "pre-commit": ["test"],
+  "pre-commit": [
+    "lint",
+    "test"
+  ],
   "author": "Maurits van Mastrigt <maurits@nerdieworks.nl>",
   "repository": {
     "type": "git",
@@ -23,6 +27,7 @@
     "vm2": "^0.2.3"
   },
   "devDependencies": {
+    "eslint": "^1.9.0",
     "jasmine": "^2.3.2",
     "pre-commit": "^1.1.2"
   }
