--- a/.eslintrc
+++ b/.eslintrc
@@ -19,11 +19,14 @@
         "comma-dangle": [
             0,
             "never"
+        ],
+        "no-console": [
+            0
         ]
     },
     "env": {
         "es6": true,
-        "browser": true
+        "node": true
     },
     "extends": "eslint:recommended",
     "ecmaFeatures": {
