--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-cli": "^6.1.4",
     "babel-preset-es2015": "^6.1.4",
     "connect": "^3.4.0",
+    "jfs": "^0.2.6",
     "raw-body": "^2.1.4",
     "request": "^2.65.0",
     "vm2": "^0.2.3"
