--- a/config.js.sample
+++ b/config.js.sample
@@ -1,12 +1,25 @@
-import Client from './src/storage/ContextBroker'
+import path from 'path'
+import { auth, metadata, storage } from './src/adapter/json'
 
 export default {
-    debug: true,
-    port: 3000,
-    client: new Client({
-        url: 'http://concava:9001/v1',
-        timeout: 5000,
-        cacheExpireTime: 15 * 60 * 1000, // 15 minutes
-    }),
-    payloadMaxSize: '512kb',
+	debug: true,
+	port: 3000,
+	payloadMaxSize: '512kb',
+	auth: {
+		enabled: true,
+		// [optional] Specify which header should be verified/used
+		header: 'Authorization',
+		// [optional] If set to true, the header ('<header>: Token <token>') will be parsed/verified for you
+		byToken: true,
+		method: auth,
+		file: path.resolve('./data/tokens.json'),
+	},
+	metadata: {
+		method: metadata,
+		file: path.resolve('./data/metadata.json'),
+	},
+	storage: {
+		method: storage,
+		path: path.resolve('./data/'),
+	},
 }
