--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-cli": "^6.3.17",
     "babel-preset-es2015": "^6.3.13",
     "connect": "^3.4.0",
+    "int24": "~0.0.1",
     "jfs": "^0.2.6",
     "raw-body": "^2.1.5",
     "request": "^2.67.0",
