--- a/.eslintrc
+++ b/.eslintrc
@@ -29,7 +29,7 @@
         "node": true
     },
     "extends": "eslint:recommended",
-    "ecmaFeatures": {
-        "modules": true
+    "parserOptions": {
+        "sourceType": "module"
     }
 }
