--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "bunyan": "^1.8.1",
     "connect": "^3.4.1",
     "int24": "~0.0.1",
     "jfs": "^0.2.6",
