--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "babel-node spec/run.js"
   },
   "pre-commit": "lint, test",
-  "author": "Maurits van Mastrigt <maurits@nerdieworks.nl>",
+  "author": "Kukua Team <dev@kukua.cc>",
   "repository": {
     "type": "git",
     "url": "https://github.com/kukua/concava.git"
