Add custom MKDocs theme and improve build process.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,8 @@
 docs_dir: doc
 site_dir: latest
 site_name: ConCaVa
-theme: readthedocs
+theme_dir: theme
+dev_addr: 0.0.0.0:8000
 pages:
     - Home: index.md
     - Introduction: introduction.md
