Minor improvements and rebuild.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,9 +8,9 @@ pages:
     - Introduction: introduction.md
     - Getting started: getting-started.md
     - Use cases: use-cases.md
-    - Install: install.md
-    - Configure: configure.md
+    - Installation: installation.md
+    - Configuration: configuration.md
     - API: api.md
     - Connectors: connectors.md
-    - Test: test.md
-    - Contribute: contribute.md
+    - Testing: testing.md
+    - Contributing: contributing.md
