--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,5 +7,6 @@ pages:
     - Introduction: index.md
     - Installation: installation.md
     - Configuration: configuration.md
+    - "Quick Start": quick-start.md
     - API: api.md
     - Contributing: contributing.md
