--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "babel-cli": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "eslint": "^2.10.2",
-    "jasmine": "^2.4.1",
+    "jasmine": "~2.4.1",
     "pre-commit": "^1.1.3"
   }
 }
