Load JSON adapter as external package.

--- a/config.js.example
+++ b/config.js.example
@@ -1,5 +1,5 @@
 const path = require('path')
-const adapter = require('./lib/adapter/json')
+const adapter = require('concava-adapter-json')
 
 module.exports = {
 	debug: true,
